--- a/luna_pinyin.dict.yaml
+++ b/luna_pinyin.dict.yaml
@@ -1,5 +1,5 @@
 ---
-name: luna_pinyin.extended
+name: luna_pinyin
 version: "2022.11.26"
 sort: by_weight  #字典初始排序，可選original或by_weight
 use_preset_vocabulary: true
