--- a/luna_pinyin.custom.yaml
+++ b/luna_pinyin.custom.yaml
@@ -2,8 +2,8 @@ patch:
   __include: base:/patch
 __patch:
 # Rx: emoji:customize:schema {
-  - patch/+:
-      __include: emoji_suggestion:/patch
+  # - patch/+:
+  #     __include: emoji_suggestion:/patch
 # }
 
-'translator/dictionary': luna_pinyin
+'translator/dictionary': caoayu
