--- a/weasel.custom.yaml
+++ b/weasel.custom.yaml
@@ -2,7 +2,7 @@ customization:
   distribution_code_name: Weasel
   distribution_version: 0.14.3_dev_0.8
   generator: "Weasel::UIStyleSettings"
-  modified_time: "Mon Nov 28 11:14:23 2022"
+  modified_time: "Mon Nov 28 17:13:50 2022"
   rime_version: 1.7.3
 lost_temple:
   "preset_color_schemes/lost_temple/border_color": 0x00444444
@@ -39,7 +39,7 @@ patch:
   __include: win11
   "style/blur_window": true
   "style/color_font": true
-  "style/color_scheme": win11light
+  "style/color_scheme": win11dark
 win10:
   "preset_color_schemes/win10black":
     back_color: 0x000000
@@ -133,6 +133,11 @@ win11:
     shadow_color: 0x16000000
     text_color: 0xc9c9c9
   "preset_color_schemes/win11light":
+    back_color: 0x303030
+    border_color: 0xc202020
+    candidate_back_color: 0x00303030
+    candidate_text_color: 0xc9c9c9
+    comment_text_color: 0xc9c9c9
     hilited_back_color: 0xffffff
     hilited_candidate_back_color: 0xf0f0f0
     hilited_candidate_text_color: 0x1a1a1a
@@ -140,11 +145,6 @@ win11:
     hilited_label_color: 0x1a1a1a
     hilited_mark_color: 0x1a1a1a
     hilited_text_color: 0x1a1a1a
-    back_color: 0x303030
-    border_color: 0xc202020
-    candidate_back_color: 0x00303030
-    candidate_text_color: 0xc9c9c9
-    comment_text_color: 0xc9c9c9
     label_color: 0xc9c9c9
     name: Win11Light
     shadow_color: 0x16000000
@@ -159,7 +159,6 @@ win11:
   "style/horizontal": true
   "style/inline_preedit": true
   "style/label_font_face": "NotFont, Segoe UI Emoji:80, Microsoft Yahei, 全宋体-1, 全宋体-2, 全宋体-3, 全宋体-F, 全宋体-X, 全宋体(调和), 全宋体(等宽)"
-  "style/mark_text": "☘"
   "style/label_font_point": 16
   "style/layout/align_type": center
   "style/layout/border": 2
@@ -175,3 +174,4 @@ win11:
   "style/layout/shadow_offset_y": 0
   "style/layout/shadow_radius": 8
   "style/layout/spacing": 16
+  "style/mark_text": "☘"
