--- a/symbols.yaml
+++ b/symbols.yaml
@@ -1,6 +1,14 @@
 # Rime's punctuation and symbols
 # encoding: utf-8
-config_version: "1.0"
+#
+# Usage: patch your Rime schema to enable /X symbols
+
+config_version: '1.2'
+
+patch:
+  punctuator/import_preset: symbols
+  recognizer/patterns/punct: '^/([0-9]0?|[A-Za-z]+)$'
+
 punctuator:
   full_shape:
     ' ' : { commit: '　' }
@@ -14,12 +22,11 @@ punctuator:
     ':' : { commit: ： }
     '''' : { pair: [ '‘', '’' ] }
     '"' : { pair: [ '“', '”' ] }
-    #'\' : [ 、, ＼ ]
-    '\' : {commit: 、}
+    '\' : [ 、, ＼ ]
     '|' : [ ·, ｜, '§', '¦' ]
     '`' : ｀
     '~' : ～
-    '!' : { commit:!}
+    '!' : { commit: ！ }
     '@' : [ ＠, ☯ ]
     '#' : [ ＃, ⌘ ]
     '%' : [ ％, '°', '℃' ]
@@ -42,14 +49,13 @@ punctuator:
     '.' : { commit: 。 }
     '<' : [ 《, 〈, «, ‹ ]
     '>' : [ 》, 〉, », › ]
-    '/' : [ 、, ､, '/', ／, ÷ ]
+    '/' : [ ､, '/', ／, ÷ ]
     '?' : { commit: ？ }
     ';' : { commit: ； }
     ':' : { commit: ： }
     '''' : { pair: [ '‘', '’' ] }
     '"' : { pair: [ '“', '”' ] }
-    #'\' : [ 、, '\', ＼ ]
-    '\' : {commit: 、}
+    '\' : [ 、, '\', ＼ ]
     '|' : [ ·, ・, '|', ｜, '§', '¦', '‖' ]
     '`' : [ '`', ‵, ‶, ‷, ′, ″, ‴, ⁗ ]
     '~' : [ '~', ～, ˜, ≈, ≋, ≃, ≅, ≇, ∽, ⋍, ≌, ﹏, ﹋, ﹌ ]
@@ -78,7 +84,7 @@ punctuator:
 #象棋、麻將、色子、撲克
     '/xq': [ ♔, ♕, ♖, ♗, ♘, ♙, ♚, ♛, ♜, ♝, ♞, ♟ ]
     '/mj': [ 🀀, 🀁, 🀂, 🀃, 🀄, 🀅, 🀆, 🀇, 🀈, 🀉, 🀊, 🀋, 🀌, 🀍, 🀎, 🀏, 🀐, 🀑, 🀒, 🀓, 🀔, 🀕, 🀖, 🀗, 🀘, 🀙, 🀚, 🀛, 🀜, 🀝, 🀞, 🀟, 🀠, 🀡, 🀢, 🀣, 🀤, 🀥, 🀦, 🀧, 🀨, 🀩, 🀪, 🀫 ]
-    '/szi': [ ⚀, ⚁, ⚂, ⚃, ⚄, ⚅ ]
+    '/sz': [ ⚀, ⚁, ⚂, ⚃, ⚄, ⚅ ]
     '/pk': [ ♠, ♥, ♣, ♦, ♤, ♡, ♧, ♢ ]
 #表情
     '/bq': [ ☻, ☺, ☹ ]
@@ -117,59 +123,130 @@ punctuator:
     '/zmq': [ ⓐ, Ⓐ, ⓑ, Ⓑ, ⓒ, Ⓒ, ⓓ, Ⓓ, ⓔ, Ⓔ, ⓕ, Ⓕ, ⓖ, Ⓖ, ⓗ, Ⓗ, ⓘ, Ⓘ, ⓙ, Ⓙ, ⓚ, Ⓚ, ⓛ, Ⓛ, ⓜ, Ⓜ, ⓝ, Ⓝ, ⓞ, Ⓞ, ⓟ, Ⓟ, ⓠ, Ⓠ, ⓡ, Ⓡ, ⓢ, Ⓢ, ⓣ, Ⓣ, ⓤ, Ⓤ, ⓥ, Ⓥ, ⓦ, Ⓦ, ⓧ, Ⓧ, ⓨ, Ⓨ, ⓩ, Ⓩ ]
     '/zmh': [ ⒜, ⒝, ⒞, ⒟, ⒠, ⒡, ⒢, ⒣, ⒤, ⒥, ⒦, ⒧, ⒨, ⒩, ⒪, ⒫, ⒬, ⒭, ⒮, ⒯, ⒰, ⒱, ⒲, ⒳, ⒴, ⒵ ]
 #數字、分數
-    '/0n': [ 〇, 零, ₀, ⁰, ⓪, ⓿ , ０]
-    '/1n': [ 一, 壹, ₁, ¹, Ⅰ, ⅰ, ①, ➀, ❶, ➊, ⓵, ⑴, ⒈, １, ㊀, ㈠, 弌, 壱, 幺, ㆒ ]
-    '/2n': [ 二, 貳, ₂, ², Ⅱ, ⅱ, ②, ➁, ❷, ➋, ⓶, ⑵, ⒉, ２, ㊁, ㈡, 弍, 弐, 貮, 㒃, 㒳, 兩, 倆, ㆓]
-    '/3n': [ 三, 叄, ₃, ³, Ⅲ, ⅲ, ③, ➂, ❸, ➌, ⓷, ⑶, ⒊, ３, ㊂, ㈢, 參, 参, 叁, 弎, 仨, ㆔]
-    '/4n': [ 四, 肆, ₄, ⁴, Ⅳ, ⅳ, ④, ➃, ❹, ➍, ⓸, ⑷, ⒋, ４, ㊃, ㈣, 亖]
-    '/5n': [ 五, 伍, ₅, ⁵, Ⅴ, ⅴ, ⑤, ➄, ❺, ➎, ⓹, ⑸, ⒌, ５, ㊄, ㈤, 㐅, 㠪, 𠄡 ]
-    '/6n': [ 六, 陸, ₆, ⁶, Ⅵ, ⅵ, ⑥, ➅, ❻, ➏, ⓺, ⑹, ⒍, ６, ㊅, ㈥, ↅ]
-    '/7n': [ 七, 柒, ₇, ⁷, Ⅶ, ⅶ, ⑦, ➆, ❼, ➐, ⓻, ⑺, ⒎, ７, ㊆, ㈦, 漆]
-    '/8n': [ 八, 捌, ₈, ⁸, Ⅷ, ⅷ, ⑧, ➇, ❽, ➑, ⓼, ⑻, ⒏, ８, ㊇, ㈧ ]
-    '/9n': [ 九, 玖, ₉, ⁹, Ⅸ, ⅸ, ⑨, ➈, ❾, ➒, ⓽, ⑼, ⒐, ９, ㊈, ㈨ ]
-    '/10n': [ 十, 拾, ₁₀, ¹⁰, Ⅹ, ⅹ, ⑩, ➉, ❿, ➓, ⓾, ⑽, ⒑, １０, ㊉, ㈩, 什 ]
+    '/0': [ 〇, 零, ₀, ⁰, ⓪, ⓿ , ０]
+    '/1': [ 一, 壹, ₁, ¹, Ⅰ, ⅰ, ①, ➀, ❶, ➊, ⓵, ⑴, ⒈, １, ㊀, ㈠, 弌, 壱, 幺, ㆒ ]
+    '/2': [ 二, 貳, ₂, ², Ⅱ, ⅱ, ②, ➁, ❷, ➋, ⓶, ⑵, ⒉, ２, ㊁, ㈡, 弍, 弐, 貮, 㒃, 㒳, 兩, 倆, ㆓]
+    '/3': [ 三, 叄, ₃, ³, Ⅲ, ⅲ, ③, ➂, ❸, ➌, ⓷, ⑶, ⒊, ３, ㊂, ㈢, 參, 参, 叁, 弎, 仨, ㆔]
+    '/4': [ 四, 肆, ₄, ⁴, Ⅳ, ⅳ, ④, ➃, ❹, ➍, ⓸, ⑷, ⒋, ４, ㊃, ㈣, 亖]
+    '/5': [ 五, 伍, ₅, ⁵, Ⅴ, ⅴ, ⑤, ➄, ❺, ➎, ⓹, ⑸, ⒌, ５, ㊄, ㈤, 㐅, 㠪, 𠄡 ]
+    '/6': [ 六, 陸, ₆, ⁶, Ⅵ, ⅵ, ⑥, ➅, ❻, ➏, ⓺, ⑹, ⒍, ６, ㊅, ㈥, ↅ]
+    '/7': [ 七, 柒, ₇, ⁷, Ⅶ, ⅶ, ⑦, ➆, ❼, ➐, ⓻, ⑺, ⒎, ７, ㊆, ㈦, 漆]
+    '/8': [ 八, 捌, ₈, ⁸, Ⅷ, ⅷ, ⑧, ➇, ❽, ➑, ⓼, ⑻, ⒏, ８, ㊇, ㈧ ]
+    '/9': [ 九, 玖, ₉, ⁹, Ⅸ, ⅸ, ⑨, ➈, ❾, ➒, ⓽, ⑼, ⒐, ９, ㊈, ㈨ ]
+    '/10': [ 十, 拾, ₁₀, ¹⁰, Ⅹ, ⅹ, ⑩, ➉, ❿, ➓, ⓾, ⑽, ⒑, １０, ㊉, ㈩, 什 ]
     '/fs': [ ⅟, ½, ↉, ⅓, ⅔, ¼, ⅕, ⅖, ⅗, ⅘, ⅙, ⅚, ⅐, ⅛, ⅜, ⅝, ⅞, ⅑, ⅒ ]
 #蘇州碼
     '/szm': [ 〡, 〢, 〣, 〤, 〥, 〦, 〧, 〨, 〩, 〸, 〹, 〺 ]
 #羅馬數字
     '/lm': [ ⅰ, ⅱ, ⅲ, ⅳ, ⅴ, ⅵ, ⅶ, ⅷ, ⅸ, ⅹ, ⅺ, ⅻ, ⅼ, ⅽ, ⅾ, ⅿ ]
     '/lmd': [ Ⅰ, Ⅱ, Ⅲ, Ⅳ, Ⅴ, Ⅵ, Ⅶ, Ⅷ, Ⅸ, Ⅹ, Ⅺ, Ⅻ, Ⅼ, Ⅽ, Ⅾ, Ⅿ ]
-    '/ng': [ ŋ ]
 #拉丁
-    '/a': [ ā, á, ǎ, à, â, ä, ã, å, ₐ, ᵃ, ª, ᵄ, ȧ, ă, ą, ⱥ, ấ, ầ, ắ, ằ, ǡ, ǻ, ǟ, ẫ, ẵ, ả, ȁ, ȃ, ẩ, ẳ, ᶏ, ạ, ḁ, ậ, ẚ, ặ, ɐ, ɑ, ɒ, ᶛ, ᵅ ]
-    '/b': [ 佰, ᵇ, ḃ, ᵬ, ƀ, ɓ, ᶀ, ḅ, ḇ, ƃ, ᵦ, ᵝ, β ]
-    '/c': [ ç, ᶜ, ć, ċ, ĉ, č, ȼ, ḉ, ƈ, ᵓ, ɔ, ᶗ, ɕ, ᶝ ]
-    '/d': [ ᵈ, ḋ, ď, ď, ᵭ, ḑ, đ, ƌ, ɗ, ᶁ, ḍ, ᶑ, ḓ, ḏ, ð, ʤ, ƍ, ᶞ, ǳ, ǆ, ɖ, ʣ, ʥ, ȡ, ẟ ]
-    '/e': [ ē, é, ě, è, ê, ë, ẽ, ₑ, ᵉ, ė, ĕ, ę, ȩ, ɇ, ế, ề, ḗ, ḕ, ễ, ḝ, ẻ, ȅ, ȇ, ể, ẹ, ᶒ, ḙ, ḛ, ᶟ, ệ, ɛ, ǝ, ə, ₔ, ᵊ, ɚ, ɘ, ɜ, ɝ, ɞ, ʚ, ȝ, ᶾ, ᶕ, ᶚ, ᴈ, ᶓ, ᶔ, ᵋ, ᵌ, ⱸ ]
-    '/f': [ ᶠ, ḟ, ᵮ, ƒ, ᶂ, ﬀ, ﬃ, ﬄ, ﬁ, fʲ, ﬂ, ʩ, ɟ, ɸ, ᶲ, ᵩ, ᵠ ]
-    '/g': [ ᵍ, ᵷ, ǵ, ġ, ĝ, ǧ, ğ, ḡ, ģ, ǥ, ɠ, ᶃ, ɣ, ᶢ, ɡ, ˠ, ᵧ, ᵞ ]
-    '/h': [  ͪ, ḣ, ĥ, ḧ, ȟ, ḩ, ħ, ɦ, ḥ, ḫ, ẖ, ⱨ, ɥ, ᶣ, ʱ, ƕ, ʮ, ʯ, ꜧ, ɧ ]
-    '/i': [ ī, í, ǐ, ì, î, ï, ĩ, ᵢ, ı, ᴉ, ĭ, į, ɨ, ḯ, ᶤ, ỉ, ȉ, ȋ, ị, ᶖ, ḭ, ᵎ, ɩ, ᶥ, ᵼ, ĳ ]
-    '/j': [ ⱼ, ʲ, ȷ, ĵ, ǰ, ɉ, ɟ, ᶡ, ʄ, ᶨ, ʝ ]
-    '/k': [ ᵏ, ḱ, ǩ, ķ, ƙ, ᶄ, ḳ, ḵ, ⱪ, ʞ ]
-    '/l': [ ˡ, ĺ, ŀ, ľ, ɫ, ⱡ, ļ, ƚ, ł, ƛ, ᶅ, ᶪ, ᶩ, ḷ, ɭ, ḽ, ḻ, ḹ, ɬ, ɮ, ǉ, ỻ, ʪ, ʫ, ȴ ]
-    '/m': [ ᵐ, ḿ, ṁ, ᵯ, ᶬ, ɱ, ᶆ, ṃ, ɯ, ᵚ, ɰ, ᶭ, ᴟ ]
-    '/n': [ ñ, ⁿ, ń, ǹ, ṅ, ň, ᵰ, ņ, ᶮ, ɲ, ŉ, ƞ, ᶇ, ṇ, ɳ, ᶯ, ṋ, ṉ, ȵ ]
-    '/o': [ ō, ó, ǒ, ò, ô, ö, õ, ₒ, ᵒ, º, ȯ, ŏ, ǫ, ő, ố, ồ, ɵ, ø, ṓ, ṑ, ȱ, ṍ, ȫ, ổ, ọ, ớ, ờ, ỡ, ộ, ɷ, ở, ợ, ᵔ, ᵕ, œ, ȣ, ᴔ, ⱺ ]
-    '/p': [ ᵖ, ṕ, ṗ, ᵱ, ᵽ, ƥ, ᶈ ]
-    '/q': [ 仟, ʠ, ɋ, ȹ ]
-    '/r': [ ᵣ, ŕ, ṙ, ř, ᵲ, ŗ, ɍ, ᵳ, ɽ, ȑ, ȓ, ᶉ, ṛ, ṟ, ṝ, ɹ, ɺ, ɻ, ɼ, ɾ, ɿ, ʳ, ʴ, ʵ, ᵨ ]
-    '/s': [ 拾, ˢ, ś, ṡ, ŝ, š, ᵴ, ş, ṥ, ṧ, ᶳ, ʂ, ᶊ, ṣ, ș, ȿ, ṩ, ʃ, ᶴ, ƨ, ʆ, ʅ, ƪ, ß, ſ, ẛ ]
-    '/t': [ ᵗ, ṫ, ť, ᵵ, ţ, ƭ, ᶵ, ƫ, ṭ, ʈ, ț, ṱ, ṯ, ⱦ, ʇ, ʧ, ʨ, ᶿ, ȶ, ŧ ]
-    '/u': [ ū, ú, ǔ, ù, û, ü, ǖ, ǘ, ǚ, ǜ, ũ, ᵤ, ᵘ, ŭ, ů, ų, ű, ᶶ, ʉ, ṹ, ṻ, ủ, ȕ, ȗ, ư, ᶙ, ụ, ṳ, ứ, ừ, ṷ, ṵ, ữ, ʉ̞, ʊ, ᶷ, ᵙ, ử, ᵿ, ự, ᴝ, ᴞ, ᵫ ]
-    '/v': [ ü, ǖ, ǘ, ǚ, ǜ, ᵥ, ᵛ, ṽ, ᶹ, ᶌ, ṿ, ⱴ, ʋ, ᶺ, ʌ ]
-    '/w': [ 萬, ʷ, ẃ, ẁ, ẇ, ŵ, ẅ, ẘ, ẉ, ƿ, ʍ, ⱳ ]
-    '/x': [ ₓ, ᶍ, ˣ, χ, ᵪ, ᵡ ]
-    '/y': [ ʸ, ý, ỳ, ẏ, ŷ, ÿ, ȳ, ỹ, ẙ, ɏ, ỷ, ƴ, ỵ, ʎ, ỿ ]
-    '/z': [ ᶻ, ź, ż, ẑ, ž, ᵶ, ƶ, ȥ, ᶎ, ᶼ, ẓ, ʐ, ɀ, ẕ, ⱬ, ʑ, ᶽ, ʒ ]
+    '/a': [ā, á, ǎ, à, ȁ, â, ă, ȃ, ȧ, ä, å, ã,    ₐ, ᵃ, ª, ⱥ, ꬰ, ả, ą, ạ, ḁ, ẚ, ấ, ầ, ẫ, ẩ, ắ, ằ, ẵ, ẳ, ǡ, ǟ, ǻ, ậ, ặ, ᶏ, ɐ, ᵄ, ɑ, ᵅ, ᶐ, ɒ, ᶛ]
+    '/A': [Ā, Á, Ǎ, À, Ȁ, Â, Ă, Ȃ, Ȧ, Ä, Å, Ã,  ᴀ,    ᴬ,   Ⱥ,     Ả, Ą, Ạ, Ḁ,    Ấ, Ầ, Ẫ, Ẩ, Ắ, Ằ, Ẵ, Ẳ, Ǡ, Ǟ, Ǻ, Ậ, Ặ,    Ɐ,    Ɑ,       Ɒ   ]
+    '/b': [ḃ, ḅ,       ᵇ,    ƀ, ƃ, ḇ, ɓ, ᵬ, ᶀ, ꞗ]
+    '/B': [Ḃ, Ḅ, ʙ, ᴃ, ᴮ, ᴯ, Ƀ, Ƃ, Ḇ, Ɓ,       Ꞗ]
+    '/c': [ç, ć, č, ĉ, ċ,    ᶜ, ȼ, ꞓ, ƈ, ḉ, ꞔ, ɕ, ᶝ, ꜿ]
+    '/C': [Ç, Ć, Č, Ĉ, Ċ, ᴄ,    Ȼ, Ꞓ, Ƈ, Ḉ,          Ꜿ]
+    '/d': [ď, ḋ,       ᵈ, đ, ƌ, ᵭ, ḑ, ḓ, ḏ, ḍ, ɖ, ɗ, ᶑ, ᶁ, ð, ᶞ, ꝱ, ʤ, ʣ, ʥ, ȡ, ƍ, ǳ,    ǆ,    ẟ]
+    '/D': [Ď, Ḋ, ᴅ, ᴆ, ᴰ, Đ, Ƌ,    Ḑ, Ḓ, Ḏ, Ḍ, Ɖ, Ɗ,       Ð,                      Ǳ, ǲ, Ǆ, ǅ   ]
+    '/e': [ē, é, ě, è, ȅ, ê, ĕ, ȇ, ė, ë, ẽ,    ₑ, ᵉ, ɇ, ꬳ, ẻ, ȩ, ę, ḙ, ẹ, ḛ, ḗ, ḕ, ế, ề, ễ, ể, ḝ, ệ, ᶒ, ꬴ, ɘ, ə, ɚ, ᶕ, ɛ, ᵋ, ᶓ, ɜ, ᵌ, ᴈ, ᶟ, ɝ, ᶔ, ɞ, ʚ, ǝ, ₔ, ᵊ, ȝ, ⱸ]
+    '/E': [Ē, É, Ě, È, Ȅ, Ê, Ĕ, Ȇ, Ė, Ë, Ẽ, ᴇ,    ᴱ, Ɇ,    Ẻ, Ȩ, Ę, Ḙ, Ẹ, Ḛ, Ḗ, Ḕ, Ế, Ề, Ễ, Ể, Ḝ, Ệ,          Ə,       Ɛ,    Ɜ,                   Ǝ, ⱻ, ᴲ, Ȝ         ]
+    '/f': [ḟ,    ᶠ, ƒ, ᵮ, ᶂ, ꞙ   ]
+    '/F': [Ḟ, ꜰ,    Ƒ,       Ꞙ, ꟻ]
+    '/g': [ḡ, ǵ, ǧ, ĝ, ğ, ġ,    ᵍ, ǥ, ꞡ, ģ, ɠ, ᵷ, ᶃ, ɡ, ꬶ, ᶢ, ɣ, ˠ, ɤ, ᵹ]
+    '/G': [Ḡ, Ǵ, Ǧ, Ĝ, Ğ, Ġ, ʛ, ᴳ, Ǥ, Ꞡ, Ģ, Ɠ,       Ɡ,       Ɣ         ]
+    '/h': [ĥ, ȟ, ḣ, ḧ,     ͪ, ħ, ɦ, ʱ, ꜧ, ꭜ, ɧ, ḩ, ẖ, ḫ, ḥ, ⱨ, ꞕ, ɥ, ᶣ, ʮ, ʯ, ⱶ]
+    '/H': [Ĥ, Ȟ, Ḣ, Ḧ, ʜ, ᴴ, Ħ, Ɦ,    Ꜧ,       Ḩ,    Ḫ, Ḥ, Ⱨ,    Ɥ,          Ⱶ]
+    '/i': [ī, í, ǐ, ì, ȉ, î, ĭ, ȋ, ï, ĩ,          ᵢ, ı, ɨ,    ᶤ, ỉ, į, ị, ḭ, ᴉ, ᵎ, ḯ,    ᶖ, ɩ, ᶥ, ᵼ]
+    '/I': [Ī, Í, Ǐ, Ì, Ȉ, Î, Ĭ, Ȋ, Ï, Ĩ, ɪ, ᴵ, ᶦ,       Ɨ, ᵻ, ᶧ, Ỉ, Į, Ị, Ḭ,       Ḯ, ꟾ,    Ɩ      ]
+    '/j': [ĵ, ǰ,     ⱼ, ʲ, ɉ, ȷ, ɟ, ᶡ, ʄ, ʝ, ᶨ]
+    '/J': [Ĵ,     ᴊ,    ᴶ, Ɉ,             Ʝ   ]
+    '/k': [ḱ, ǩ,    ₖ, ᵏ, ꝁ, ꝃ, ꞣ, ꝅ, ķ, ḵ, ḳ, ƙ, ᶄ, ⱪ, ʞ, ĸ]
+    '/K': [Ḱ, Ǩ, ᴋ,    ᴷ, Ꝁ, Ꝃ, Ꞣ, Ꝅ, Ķ, Ḵ, Ḳ, Ƙ,    Ⱪ, Ʞ   ]
+    '/l': [ĺ,    ˡ, ł, ꝉ, ƚ,    ⱡ, ɫ, ꭞ, ꬸ, ɬ, ľ, ļ, ḻ, ḽ, ḷ, ŀ, ꝲ, ƛ, ᶅ, ᶪ, ɭ, ᶩ, ḹ, ꬷ, ꭝ, ꬹ, ȴ, ꝇ]
+    '/L': [Ĺ, ʟ, ᶫ, Ƚ, Ꝉ, Ł, ᴌ, Ⱡ, Ɫ,       Ɬ, Ľ, Ļ, Ḻ, Ḽ, Ḷ, Ŀ,                                  Ꝇ]
+    '/m': [ḿ, ṁ,    ᵐ, ₘ, ṃ, ᵯ, ɱ, ᶬ, ꬺ, ᶆ, ꝳ, ɯ, ᵚ,       ɰ, ᶭ, ᴟ]
+    '/M': [Ḿ, Ṁ, ᴍ, ᴹ,    Ṃ,    Ɱ,             Ɯ,    ꟽ, ꟿ         ]
+    '/n': [ń, ň, ǹ, ṅ, ñ,    ₙ, ⁿ,       ɲ, ᶮ, ɳ, ᶯ, ȵ, ƞ, ŋ, ᵑ, ꬻ, ꬼ, ꝴ, ŉ, ꞥ, ņ, ṉ, ṋ, ṇ, ᵰ, ꞑ, ᶇ]
+    '/N': [Ń, Ň, Ǹ, Ṅ, Ñ, ɴ,    ᴺ, ᴻ, ᶰ, Ɲ,             Ƞ, Ŋ,                    Ņ, Ṉ, Ṋ, Ṇ,     Ꞑ   ]
+    '/o': [ō, ó, ő, ǒ, ò, ô, ŏ, ȯ, ö, õ,    ₒ, ᵒ, º, ɔ,    ᵓ, ᶗ, ꬿ, ø, ǫ, ọ, ơ, ɵ, ᶱ, ᴑ, ᴒ, ᴓ, ꝋ, ꝍ, ṓ, ṑ, ố, ồ, ỗ, ổ, ȱ, ȫ, ȭ, ṍ, ṏ, ộ, ǭ, ǿ, ớ, ờ, ỡ, ở, ợ, ɷ, ⱺ, ᴖ, ᵔ, ᴗ, ᵕ]
+    '/O': [Ō, Ó, Ő, Ǒ, Ò, Ô, Ŏ, Ȯ, Ö, Õ, ᴏ,    ᴼ,    Ɔ, ᴐ,          Ø, Ǫ, Ọ, Ơ, Ɵ,             Ꝋ, Ꝍ, Ṓ, Ṑ, Ố, Ồ, Ỗ, Ổ, Ȱ, Ȫ, Ȭ, Ṍ, Ṏ, Ộ, Ǭ, Ǿ, Ớ, Ờ, Ỡ, Ở, Ợ                  ]
+    '/p': [ṕ, ṗ,    ᵖ, ᵽ, ꝑ, ᵱ, ƥ, ᶈ, ꝓ, ꝕ, ɸ, ᶲ, ⱷ   ]
+    '/P': [Ṕ, Ṗ, ᴘ, ᴾ, Ᵽ, Ꝑ,    Ƥ,    Ꝓ, Ꝕ,          ꟼ]
+    '/q': [ɋ, ꝗ, ꝙ, ʠ]
+    '/Q': [Ɋ, Ꝗ, Ꝙ   ]
+    '/r': [ŕ, ř, ȑ, ȓ, ṙ,                ᵣ, ɍ, ꞧ, ᵲ, ŗ, ṟ, ṛ, ṝ, ᵳ, ɽ, ᶉ, ꭇ, ꭈ, ꭊ, ꭉ,    ꝵ, ꭋ, ꭌ, ɹ, ʴ,    ɺ, ɻ, ʵ, ⱹ, ɼ, ʳ, ɾ, ɿ, ꝛ, ꝝ]
+    '/R': [Ŕ, Ř, Ȑ, Ȓ, Ṙ, ʀ, ᴙ, ᴿ, Ʀ, ꭆ,    Ɍ, Ꞧ,    Ŗ, Ṟ, Ṛ, Ṝ,    Ɽ,                ꝶ,             ʶ, ʁ,                         Ꝛ, Ꝝ]
+    '/s': [ś, ŝ, š, ṡ,    ˢ, ʂ, ᶳ, ᵴ, ꞩ, ᶊ, ş, ṣ, ș, ȿ, ṥ, ṧ, ṩ, ʃ, ᶴ, ʆ, ᶘ, ʅ, ƪ, ß, ſ, ẛ, ẜ, ẝ]
+    '/S': [Ś, Ŝ, Š, Ṡ, ꜱ,             Ꞩ,    Ş, Ṣ, Ș,    Ṥ, Ṧ, Ṩ, Ʃ,                ẞ,           ]
+    '/t': [ť, ṫ, ẗ,    ᵗ, ₜ, ʈ, þ, ꝥ, ꝧ, ŧ, ⱦ, ţ, ṯ, ṱ, ṭ, ț, ƭ, ᵵ, ƫ, ᶵ, ʇ, ȶ, ꝷ]
+    '/T': [Ť, Ṫ,    ᴛ, ᵀ,    Ʈ, Þ, Ꝥ, Ꝧ, Ŧ, Ⱦ, Ţ, Ṯ, Ṱ, Ṭ, Ț, Ƭ,          Ʇ      ]
+    '/u': [ū, ú, ű, ǔ, ù, ȕ, û, ŭ, ȗ, ü, ǖ, ǘ, ǚ, ǜ, ů, ũ,    ᵤ, ᵘ,    ʉ, ᶶ, ủ, ų, ṷ, ụ, ṳ, ṵ, ư, ʊ, ᶷ, ᵿ, ᶙ, ṻ, ṹ, ứ, ừ, ữ, ử, ự, ꭒ, ꭟ, ꝸ, ꭎ, ꭏ, ᴝ, ᵙ, ᴞ]
+    '/U': [Ū, Ú, Ű, Ǔ, Ù, Ȕ, Û, Ŭ, Ȗ, Ü, Ǖ, Ǘ, Ǚ, Ǜ, Ů, Ũ, ᴜ,    ᵁ, ᶸ, Ʉ,    Ủ, Ų, Ṷ, Ụ, Ṳ, Ṵ, Ư, Ʊ           Ṻ, Ṹ, Ứ, Ừ, Ữ, Ử, Ự                       ]
+    '/v': [ü, ǖ, ǘ, ǚ, ǜ, ṽ,    ᵛ, ᵥ, ṿ, ꝟ, ʋ, ᶹ, ᶌ, ⱴ, ⱱ, ỽ, ʌ, ᶺ]
+    '/V': [Ü, Ǖ, Ǘ, Ǚ, Ǜ, Ṽ, ᴠ, ⱽ,    Ṿ, Ꝟ, Ʋ,          Ỽ,    Ʌ   ]
+    '/w': [ẃ, ẁ, ŵ, ẇ, ẅ, ẘ,    ʷ, ẉ, ƿ, ʍ, ⱳ]
+    '/W': [Ẃ, Ẁ, Ŵ, Ẇ, Ẅ, W̊, ᴡ, ᵂ, Ẉ, Ƿ,    Ⱳ]
+    '/x': [ẋ, ẍ, ᶍ, ˣ, ₓ, ꭖ, ꭗ, ꭘ, ꭙ]
+    '/X': [Ẋ, Ẍ                     ]
+    '/y': [ȳ, ý, ỳ, ŷ, ẏ, ÿ, ẙ, ỹ,    ʸ, ɏ, ỷ, ỵ, ƴ, ʎ, ỿ, ꭚ]
+    '/Y': [Ȳ, Ý, Ỳ, Ŷ, Ẏ, Ÿ,    Ỹ, ʏ,    Ɏ, Ỷ, Ỵ, Ƴ,    Ỿ   ]
+    '/z': [ź, ž, ẑ, ż,    ᶻ, ʐ, ᶼ, ʑ, ᶽ, ƶ, ẕ, ẓ, ᵶ, ȥ, ⱬ, ᶎ, ʒ,    ᶾ, ǯ, ʓ, ƹ, ƺ, ᶚ, θ, ᶿ, ɀ, ꝣ]
+    '/Z': [Ź, Ž, Ẑ, Ż, ᴢ,                Ƶ, Ẕ, Ẓ,    Ȥ, Ⱬ     Ʒ, ᴣ,    Ǯ,    Ƹ,             Ɀ, Ꝣ]
+    '/aa': [ꜳ]
+    '/AA': [Ꜳ]
+    '/ae': [æ, ǣ, ǽ, ᵆ,   ᴂ]
+    '/AE': [Æ, Ǣ, Ǽ, ᴭ, ᴁ  ]
+    '/ao': [ꜵ]
+    '/AO': [Ꜵ]
+    '/au': [ꜷ]
+    '/AU': [Ꜷ]
+    '/av': [ꜹ, ꜻ]
+    '/AV': [Ꜹ, Ꜻ]
+    '/ay': [ꜽ]
+    '/AY': [Ꜽ]
+    '/db': [ȸ]
+    '/ff': [ﬀ]
+    '/ffi': [ﬃ]
+    '/ffl': [ﬄ]
+    '/fi': [ﬁ]
+    '/fl': [ﬂ]
+    '/fn': [ʩ]
+    '/hv': [ƕ]
+    '/HV': [Ƕ]
+    '/ij': [ĳ]
+    '/IJ': [Ĳ]
+    '/lj': [ǉ]
+    '/ll': [ỻ]
+    '/LL': [Ỻ]
+    '/ls': [ʪ]
+    '/lz': [ʫ, ɮ]
+    '/nj': [ǌ]
+    '/Nj': [ǋ]
+    '/NJ': [Ǌ]
+    '/oe': [œ,    ᴔ]
+    '/OE': [Œ, ɶ   ]
+    '/oi': [ƣ]
+    '/OI': [Ƣ]
+    '/oo': [ꝏ]
+    '/OO': [Ꝏ]
+    '/ou': [ȣ   ]
+    '/OU': [Ȣ, ᴽ]
+    '/qp': [ȹ]
+    '/tc': [ʨ]
+    '/th': [ᵺ]
+    '/ts': [ʦ, ʧ]
+    '/tz': [ꜩ]
+    '/TZ': [Ꜩ]
+    '/ue': [ᵫ]
+    '/vy': [ꝡ]
+    '/VY': [Ꝡ]
+    '/ww': [ʬ]
 #上標、下標
     '/sb': [ ⁰, ¹, ², ³, ⁴, ⁵, ⁶, ⁷, ⁸, ⁹, ˜, ⁺, ⁻, ⁼, ⁽, ⁾, ᴬ, ᵃ, ᵄ, ᵅ, ᶛ, ᴭ, ᵆ, ᴮ, ᴯ, ᵇ, ᵝ, ᶜ, ᵓ, ᶝ, ᴰ, ᵈ, ᶞ, ᵟ, ᴱ, ᵉ, ᴲ, ᵊ, ᵋ, ᶟ, ᵌ, ᶠ, ᶡ, ᶲ, ᵠ, ᴳ, ᵍ, ᶢ, ˠ, ᵞ, ᴴ, ʰ, ᶣ, ʱ, ᴵ, ⁱ, ᶤ, ᵎ, ᶥ, ᴶ, ʲ, ᶨ, ᴷ, ᵏ, ᴸ, ᶫ, ˡ, ᶩ, ᶪ, ᴹ, ᵐ, ᶬ, ᵚ, ᶭ, ᴺ, ᴻ, ⁿ, ᵑ, ᶮ, ᶯ, ᴼ, ᵒ, ᶱ, ᴽ, ᴾ, ᵖ, ᴿ, ʳ, ʶ, ʴ, ʵ, ˢ, ᶴ, ᶳ, ᵀ, ᵗ, ᶵ, ᶿ, ᵁ, ᵘ, ᶶ, ᶷ, ᵙ, ⱽ, ᵛ, ᶺ, ᶹ, ᵂ, ʷ, ˣ, ᵡ, ʸ, ᶻ, ᶾ, ᶽ, ᶼ ]
     '/xb': [ ₀, ₁, ₂, ₃, ₄, ₅, ₆, ₇, ₈, ₉, ₊, ₋, ₌, ₍, ₎, ‸, ᴀ, ₐ, ᴁ, ʙ, ᴃ, ᵦ, ᴄ, ᴐ, ᴒ, ᴅ, ᴆ, ᴇ, ₑ, ₔ, ᵩ, ɢ, ʛ, ᴦ, ᵧ, ʜ, ₕ, ɪ, ᵻ, ᵢ, ᴊ, ⱼ, ᴋ, ₖ, ʟ, ₗ, ᴌ, ᴧ, ᴍ, ₘ, ꟺ, ɴ, ᴎ, ₙ, ᴏ, ₒ, ɶ, ʘ, ᴓ, ᴑ, ᴘ, ₚ, ᴨ, ᴪ, ʀ, ᵣ, ᴙ, ʁ, ᴚ, ᵨ, ₛ, ᴛ, ₜ, ᴜ, ᵤ, ᵾ, ᴠ, ᵥ, ᴡ, ₓ, ᵪ, ʏ, ᴢ, ᴣ ]
 #希臘
     '/xl': [ α, β, γ, δ, ε, ζ, η, θ, ι, κ, λ, μ, ν, ξ, ο, π, ρ, σ, ς, τ, υ, φ, χ, ψ, ω ]
-    '/alpha' : [ α, Α]
-    '/beta' : [ β, Β ]
-    '/omega' : [ ω, Ω ]
     '/xld': [ Α, Β, Γ, Δ, Ε, Ζ, Η, Θ, Ι, Κ, Λ, Μ, Ν, Ξ, Ο, Π, Ρ, Σ, Τ, Υ, Φ, Χ, Ψ, Ω ]
 #俄語
     '/ey': [ а, б, в, г, д, е, ё, ж, з, и, й, к, л, м, н, о, п, р, с, т, у, ф, х, ц, ч, ш, щ, ъ, ы, ь, э, ю, я ]
@@ -187,7 +264,7 @@ punctuator:
 #節氣
     '/jq': [ 立春, 雨水, 驚蟄, 春分, 清明, 穀雨, 立夏, 小滿, 芒種, 夏至, 小暑, 大暑, 立秋, 處暑, 白露, 秋分, 寒露, 霜降, 立冬, 小雪, 大雪, 冬至, 小寒, 大寒 ]
 #單位
-    '/dw': [ ℃, Å, ％, ‰, ‱, °, ℉, ㏃, ㏆, ㎈, ㏄, ㏅, ㎝, ㎠, ㎤, ㏈, ㎗, ㎙, ㎓, ㎬, ㏉, ㏊, ㏋, ㎐, ㏌, ㎄, ㎅, ㎉, ㎏, ㎑, ㏍, ㎘, ㎞, ㏎, ㎢, ㎦, ㎪, ㏏, ㎸, ㎾, ㏀, ㏐, ㏓, ㎧, ㎨, ㎡, ㎥, ㎃, ㏔, ㎆, ㎎, ㎒, ㏕, ㎖, ㎜, ㎟, ㎣, ㏖, ㎫, ㎳, ㎷, ㎹, ㎽, ㎿, ㏁, ㎁, ㎋, ㎚, ㎱, ㎵, ㎻, ㏘, ㎩, ㎀, ㎊, ㏗, ㏙, ㏚, ㎰, ㎴, ㎺, ㎭, ㎮, ㎯, ㏛, ㏜, ㎔, ㏝, ㎂, ㎌, ㎍, ㎕, ㎛, ㎲, ㎶, ㎼ ]
+    '/dw': [ Å, ℃, ％, ‰, ‱, °, ℉, ㏃, ㏆, ㎈, ㏄, ㏅, ㎝, ㎠, ㎤, ㏈, ㎗, ㎙, ㎓, ㎬, ㏉, ㏊, ㏋, ㎐, ㏌, ㎄, ㎅, ㎉, ㎏, ㎑, ㏍, ㎘, ㎞, ㏎, ㎢, ㎦, ㎪, ㏏, ㎸, ㎾, ㏀, ㏐, ㏓, ㎧, ㎨, ㎡, ㎥, ㎃, ㏔, ㎆, ㎎, ㎒, ㏕, ㎖, ㎜, ㎟, ㎣, ㏖, ㎫, ㎳, ㎷, ㎹, ㎽, ㎿, ㏁, ㎁, ㎋, ㎚, ㎱, ㎵, ㎻, ㏘, ㎩, ㎀, ㎊, ㏗, ㏙, ㏚, ㎰, ㎴, ㎺, ㎭, ㎮, ㎯, ㏛, ㏜, ㎔, ㏝, ㎂, ㎌, ㎍, ㎕, ㎛, ㎲, ㎶, ㎼ ]
 #貨幣
     '/hb': [ ￥, ¥, ¤, ￠, ＄, $, ￡, £, ৳, ฿, ₠, ₡, ₢, ₣, ₤, ₥, ₦, ₧, ₩, ₪, ₫, €, ₭, ₮, ₯, ₰, ₱, ₲, ₳, ₴, ₵, ₶, ₷, ₸, ₹, ₺, ₨, ﷼ ]
 #結構、偏旁、康熙（部首）、筆畫、標點
@@ -198,7 +275,8 @@ punctuator:
     '/bd': [ 、, 。, 「, 」, 『, 』, 【, 】, 〈, 〉, 《, 》, ₋, ⁻, ―, ˗, ˉ, ＿, ﹍, ﹎, ．, ¡, ‼, ⁉, ¿, ؟, ⁈, ⁇, ､, ｡, 〃, 〄, 々, 〆, 〇, 〒, 〓, 〔, 〕, 〖, 〗, 〘, 〙, 〚, 〛, 〜, 〝, 〞, 〟, 〠, 〰, 〱, 〲, 〳, 〴, 〵, 〶, 〷, 〻, 〼, 〽 ]
     '/bdz': [ ﹅, ﹆, ﹁, ﹂, ﹃, ﹄, ︙, ︱, ︻, ︼, ︗, ︘, ︵, ︶, ︷, ︸, ︹, ︺, ︿, ﹀, ︽, ︾, ︰, ︲, ︳, ︴, ﹉, ﹊, ﹋, ﹌, ﹍, ﹎, ﹏, ﹇, ﹈, ︐, ︑, ︒, ︔, ︕, ︖ ]
 #拼音、註音、聲調
-    '/py': [ ā, á, ǎ, à, ō, ó, ǒ, ò, ê, ē, é, ě, è, ī, í, ǐ, ì, ū, ú, ǔ, ù, ü, ǖ, ǘ, ǚ, ǜ, ń, ň ]
+    '/py': [ ā, á, ǎ, à, ō, ó, ǒ, ò, ê, ê̄, ế, ê̌, ề, ē, é, ě, è, ī, í, ǐ, ì, ū, ú, ǔ, ù, ü, ǖ, ǘ, ǚ, ǜ, ḿ, m̀, ń, ň, ǹ, ẑ, ĉ, ŝ, ŋ ]
+    '/pyd': [ Ā, Á, Ǎ, À, Ō, Ó, Ǒ, Ò, Ê, Ê̄, Ế, Ê̌, Ề, Ē, É, Ě, È, Ī, Í, Ǐ, Ì, Ū, Ú, Ǔ, Ù, Ü, Ǖ, Ǘ, Ǚ, Ǜ, Ḿ, M̀, Ń, Ň, Ǹ, Ẑ, Ĉ, Ŝ, Ŋ ]
     '/zy': [ ㄅ, ㄆ, ㄇ, ㄈ, ㄉ, ㄊ, ㄋ, ㄌ, ㄍ, ㄎ, ㄏ, ㄐ, ㄑ, ㄒ, ㄓ, ㄔ, ㄕ, ㄖ, ㄗ, ㄘ, ㄙ, ㄧ, ㄨ, ㄩ, ㄚ, ㄛ, ㄜ, ㄝ, ㄞ, ㄟ, ㄠ, ㄡ, ㄢ, ㄣ, ㄤ, ㄥ, ㄦ, ㄪ, ㄫ, ㄬ, ㄭ, ㆠ, ㆡ, ㆢ, ㆣ, ㆤ, ㆥ, ㆦ, ㆧ, ㆨ, ㆩ, ㆪ, ㆫ, ㆬ, ㆭ, ㆮ, ㆯ, ㆰ, ㆱ, ㆲ, ㆳ, ㆴ, ㆵ, ㆶ, ㆷ ]
     '/sd': [ ˉ, ˊ, ˇ, ˋ, ˆ, ˙, ˜, ˥, ˦, ˧, ˨, ˩, ꜀, ꜁, ꜂, ꜃, ꜄, ꜅, ꜆, ꜇ ]
 #漢字+圈/弧
@@ -237,7 +315,3 @@ punctuator:
 #韓文+圈/弧
     '/hwq': [ ㉠, ㉡, ㉢, ㉣, ㉤, ㉥, ㉦, ㉧, ㉨, ㉩, ㉪, ㉫, ㉬, ㉭, ㉮, ㉯, ㉰, ㉱, ㉲, ㉳, ㉴, ㉵, ㉶, ㉷, ㉸, ㉹, ㉺, ㉻, ㉼, ㉽, ㉾, ㉿ ]
     '/hwh': [ ㈀, ㈁, ㈂, ㈃, ㈄, ㈅, ㈆, ㈇, ㈈, ㈉, ㈊, ㈋, ㈌, ㈍, ㈎, ㈏, ㈐, ㈑, ㈒, ㈓, ㈔, ㈕, ㈖, ㈗, ㈘, ㈙, ㈚, ㈛, ㈜, ㈝, ㈞ ]
-#emoji
-    '/emjxl': [😀, 😁, 😂, 😃, 😄, 😅, 😆, 😉, 😊, 😋, 😎, 😍, 😘, 😗, 😙, 😚, ☺, 😇, 😐, 😑, 😶, 😏, 😣, 😥, 😮, 😯, 😪, 😫, 😴, 😌, 😛, 😜, 😝, 😒, 😓, 😔, 😕, 😲, 😷, 😖, 😞, 😟, 😤, 😢, 😭, 😦, 😧, 😨, 😬, 😰, 😱, 😳, 😵, 😡, 😠]
-    #天气
-    '/tq': [ 晴, 雨, 雪 ]
