--- a/luna_pinyin.extended.dict.yaml
+++ b/luna_pinyin.extended.dict.yaml
@@ -42,50 +42,50 @@ use_preset_vocabulary: true
 #雙拼不支持 luna_pinyin.cn_en 詞庫，請用戶手動禁用。
 
 import_tables:
-  - dicts/essay
-  - dicts/luna_pinyin.anime
-  - dicts/luna_pinyin.basis
+  # - dicts/essay
+  # - dicts/luna_pinyin.anime
+  # - dicts/luna_pinyin.basis
   - dicts/luna_pinyin.biaoqing
   # - dicts/luna_pinyin.cet46_plus
-  - dicts/luna_pinyin.chat
-  - dicts/luna_pinyin.chengyusuyu
-  - dicts/luna_pinyin.classical
+  # - dicts/luna_pinyin.chat
+  # - dicts/luna_pinyin.chengyusuyu
+  # - dicts/luna_pinyin.classical
   - dicts/luna_pinyin.cn_en
   # - dicts/luna_pinyin.cnenhybird
   - dicts/luna_pinyin.comprehensive
-  - dicts/luna_pinyin.computer
-  - dicts/luna_pinyin.diet
+  # - dicts/luna_pinyin.computer
+  # - dicts/luna_pinyin.diet
   - dicts/luna_pinyin.emoji
   - dicts/luna_pinyin.english
   - dicts/luna_pinyin.esymbol
-  - dicts/luna_pinyin.extra_hanzi
-  - dicts/luna_pinyin.food
-  - dicts/luna_pinyin.game
-  - dicts/luna_pinyin.hanyu
-  - dicts/luna_pinyin.history
-  - dicts/luna_pinyin.idiom
-  - dicts/luna_pinyin.king
-  - dicts/luna_pinyin.math
-  - dicts/luna_pinyin.mingxing
-  - dicts/luna_pinyin.movie_aosika
-  - dicts/luna_pinyin.music
-  - dicts/luna_pinyin.name
-  - dicts/luna_pinyin.net
+  # - dicts/luna_pinyin.extra_hanzi
+  # - dicts/luna_pinyin.food
+  # - dicts/luna_pinyin.game
+  # - dicts/luna_pinyin.hanyu
+  # - dicts/luna_pinyin.history
+  # - dicts/luna_pinyin.idiom
+  # - dicts/luna_pinyin.king
+  # - dicts/luna_pinyin.math
+  # - dicts/luna_pinyin.mingxing
+  # - dicts/luna_pinyin.movie_aosika
+  # - dicts/luna_pinyin.music
+  # - dicts/luna_pinyin.name
+  # - dicts/luna_pinyin.net
   # - dicts/luna_pinyin.place_xingzheng
   - dicts/luna_pinyin.place
-  - dicts/luna_pinyin.plantPlus
+  # - dicts/luna_pinyin.plantPlus
   - dicts/luna_pinyin.poetry
-  - dicts/luna_pinyin.popular
+  # - dicts/luna_pinyin.popular
   # - dicts/luna_pinyin.school_high_good
   # - dicts/luna_pinyin.school_high_others
   - dicts/luna_pinyin.school_high_simply
   # - dicts/luna_pinyin.school_high
-  - dicts/luna_pinyin.shopping
+  # - dicts/luna_pinyin.shopping
   # - dicts/luna_pinyin.single
   # - dicts/luna_pinyin.sougou.basic
-  - dicts/luna_pinyin.user
-  - dicts/luna_pinyin.word_extend
-  - dicts/luna_pinyin.xiandaihanyu
+  # - dicts/luna_pinyin.user
+  # - dicts/luna_pinyin.word_extend
+  # - dicts/luna_pinyin.xiandaihanyu
 
   - luna_pinyin
 ...
