--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -1,18 +1,16 @@
 customization:
   distribution_code_name: Weasel
-  distribution_version: 0.14.3_dev_0.8
+  distribution_version: 0.16.1
   generator: "Rime::SwitcherSettings"
-  modified_time: "Thu Dec  1 14:25:38 2022"
-  rime_version: 1.7.3
+  modified_time: "Thu Sep 19 10:40:47 2024"
+  rime_version: 1.11.2
 patch:
   ascii_composer:
     good_old_caps_lock: true
     switch_key: {Caps_Lock: clear, Control_L: noop, Control_R: noop, Eisu_toggle: clear, Shift_L: commit_code, Shift_R: commit_code}
   "menu/page_size": 9
   schema_list:
-    - {schema: luna_pinyin}
-  
+    - {schema: rime_mint}
   switcher:
-    caption: 〔方案選單〕
-    hotkeys:
-      - F4
+    caption: "〔方案選單〕"
+    hotkeys: [F4]
