--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -2,7 +2,7 @@ customization:
   distribution_code_name: Weasel
   distribution_version: 0.16.1
   generator: "Rime::SwitcherSettings"
-  modified_time: "Thu Sep 19 10:40:47 2024"
+  modified_time: "Thu Sep 19 10:51:29 2024"
   rime_version: 1.11.2
 patch:
   ascii_composer:
@@ -11,6 +11,7 @@ patch:
   "menu/page_size": 9
   schema_list:
     - {schema: rime_mint}
+    - {schema: rime_ice}
   switcher:
     caption: "〔方案選單〕"
     hotkeys: [F4]
