--- a/installation.yaml.example
+++ b/installation.yaml.example
@@ -5,5 +5,4 @@ install_time: "Thu Sep 19 10:26:09 2024"
 installation_id: "windows11-kbz-pc-i71165G7"
 rime_version: 1.11.2
 
-sync_dir: "C:\\Users\\caoayu\\OneDrive\\rime-save"
-update_time: "Tue Sep 17 00:07:02 2024"
+sync_dir: "C:\\Users\\14012\\OneDrive\\rime-save"
