--- a/luna_pinyin.extended.dict.yaml
+++ b/luna_pinyin.extended.dict.yaml
@@ -42,11 +42,11 @@ use_preset_vocabulary: true
 #雙拼不支持 luna_pinyin.cn_en 詞庫，請用戶手動禁用。
 
 import_tables:
-  - dicts/essay
+  # - dicts/essay
   - dicts/luna_pinyin.anime
   - dicts/luna_pinyin.basis
   - dicts/luna_pinyin.biaoqing
-  # - dicts/luna_pinyin.cet46_plus
+  - dicts/luna_pinyin.cet46_plus
   - dicts/luna_pinyin.chat
   - dicts/luna_pinyin.chengyusuyu
   # - dicts/luna_pinyin.classical
@@ -61,12 +61,12 @@ import_tables:
   # - dicts/luna_pinyin.extra_hanzi
   - dicts/luna_pinyin.food
   - dicts/luna_pinyin.game
-  - dicts/luna_pinyin.hanyu
+  # - dicts/luna_pinyin.hanyu
   - dicts/luna_pinyin.history
   - dicts/luna_pinyin.idiom
-  - dicts/luna_pinyin.king
+  # - dicts/luna_pinyin.king
   - dicts/luna_pinyin.math
-  - dicts/luna_pinyin.mingxing
+  # - dicts/luna_pinyin.mingxing
   - dicts/luna_pinyin.movie_aosika
   - dicts/luna_pinyin.music
   - dicts/luna_pinyin.name
