--- a/melt_eng.dict.yaml
+++ b/melt_eng.dict.yaml
@@ -1,11 +1,13 @@
+# Rime dictionary
+# encoding: utf-8
+#
+# 挂载英文输入方案的词库
+#
+
 ---
-name: melt_eng         # 注意name和文件名一致
-version: "2024.02.11"
-sort: by_weight
-use_preset_vocabulary: true
-# 此处为 输入法所用到的词库，既补充拓展词库的地方
+name: melt_eng
+version: "2023-05-09"
 import_tables:
-  - dicts/rime_ice.en_ext   # 雾凇拼音-英文扩展
-  - dicts/rime_ice.en       # 雾凇拼音-英文Base
- # - easy_en # Easy-en基础
+  - en_dicts/en_ext # 补充（里面有些许带权重的，且和 en 重复，需要把 en_ext 放在上面）
+  - en_dicts/en     # 英文主词库
 ...
