--- a/rime_mint.dict.yaml
+++ b/rime_mint.dict.yaml
@@ -12,6 +12,11 @@ import_tables:
   - dicts/rime_ice.ext           # 雾凇拼音 扩展词库
   - dicts/other_kaomoji          # 颜文字表情（按`VV`呼出)
   - dicts/rime_ice.others        # 雾凇拼音 others词库（用于自动纠错）
+  - cn_dicts/base     # 基础词库
+  - cn_dicts/ext      # 扩展词库
+  - cn_dicts/tencent  # 腾讯词向量（大词库，部署时间较长）
+  - cn_dicts/others   # 一些杂项
+  - cn_dicts/8105     # 字表
   # 20240608 Emoji完全交友OpenCC，不再使用字典作为补充
   # - dicts/other_emoji            # Emoji(仅仅作为补充，实际使用一般是OpenCC生效)
 ...
