--- a/rime_ice.dict.yaml
+++ b/rime_ice.dict.yaml
@@ -6,14 +6,37 @@ name: rime_ice
 version: "2023-11-13"
 import_tables:
   - cn_dicts/8105     # 字表
-  # - cn_dicts/41448  # 大字表（按需启用）
+  - cn_dicts/41448  # 大字表（按需启用）
   - cn_dicts/base     # 基础词库
   - cn_dicts/ext      # 扩展词库
   - cn_dicts/tencent  # 腾讯词向量（大词库，部署时间较长）
   - cn_dicts/others   # 一些杂项
 
   # 建议把扩展词库放到下面，有重复词条时，最上面的权重生效
-  # - cn_dicts/mydict
+  - my_dicts/anime
+  - my_dicts/basis
+  - my_dicts/biaoqing
+  - my_dicts/chat
+  - my_dicts/classical
+  - my_dicts/cn_en
+  - my_dicts/computer
+  - my_dicts/daily
+  - my_dicts/diet
+  - my_dicts/game
+  - my_dicts/gd
+  - my_dicts/hanyu
+  - my_dicts/history
+  - my_dicts/idiom
+  - my_dicts/moba
+  - my_dicts/movie
+  - my_dicts/music
+  - my_dicts/name
+  - my_dicts/net
+  - my_dicts/poetry
+  - my_dicts/practical
+  - my_dicts/sougou
+  - my_dicts/website
+
 ...
 
 # 按需启用：
