--- a/en_dicts/en_ext.dict.yaml
+++ b/en_dicts/en_ext.dict.yaml
@@ -1,11 +1,13 @@
 # Rime dictionary
 # encoding: utf-8
 #
+#
 # https://github.com/iDvel/rime-ice
 # ------- 补充的英文词汇 -------
+#
 ---
 name: en_ext
-version: "2024-06-10"
+version: "2024-05-31"
 sort: by_weight
 ...
 # 一些杂项
@@ -34,6 +36,8 @@ Del	Del
 delete	delete
 Esc	Esc
 eject	eject
+
+
 # 月份（据说好像 5、6、7 月不要缩写 https://www.zhihu.com/question/29896678）
 January	January
 Jan.	Jan.
@@ -72,6 +76,8 @@ November	Nov
 December	December
 Dec.	Dec.
 December	Dec
+
+
 # 星期
 Monday	Monday
 Mon.	Mon.
@@ -97,6 +103,8 @@ Saturday	Sat
 Sunday	Sunday
 Sun.	Sun.
 Sunday	Sun
+
+
 # 生活大爆炸 & 老友记
 Sheldon	Sheldon
 Leonard	Leonard
@@ -111,6 +119,8 @@ Joey	Joey
 Ross	Ross
 Chandler	Chandler
 Phoebe	Phoebe
+
+
 # 特定的排序，为了每组的排序，code 必须保持一致
 hell	hell	2
 he'll	hell	1
@@ -127,12 +137,15 @@ she'd	shed	1
 net	net	2
 .NET	net	1
 .NET	dotnet
+
+
 # 带权重的系列
 iPhone	iPhone	999
 iPhone 15	iPhone	4
 iPhone 15 Plus	iPhone	3
 iPhone 15 Pro	iPhone	2
 iPhone 15 Pro Max	iPhone	1
+
 Mac OS X	MacOSX	999
 Mac OS X Cheetah	MacOSX	1
 Mac OS X Puma	MacOSX	2
@@ -141,12 +154,14 @@ Mac OS X Panther	MacOSX	4
 Mac OS X Tiger	MacOSX	5
 Mac OS X Leopard	MacOSX	6
 Mac OS X Snow Leopard	MacOSX	7
+
 OS X	OSX	999
 OS X Lion	OSX	1
 OS X Mountain Lion	OSX	2
 OS X Mavericks	OSX	3
 OS X Yosemite	OSX	4
 OS X El Capitan	OSX	5
+
 macOS	macOS	999
 macOS Sierra	macOS	1
 macOS High Sierra	macOS	2
@@ -156,7 +171,7 @@ macOS Big Sur	macOS	5
 macOS Monterey	macOS	6
 macOS Ventura	macOS	7
 macOS Sonoma	macOS	8
-macOS Sequoia	macOS	8
+
 Windows	Windows	999
 Windows 95	Windows	1
 Windows 98	Windows	2
@@ -169,6 +184,8 @@ Windows 7	Windows	7
 Windows 8	Windows	8
 Windows 10	Windows	10
 Windows 11	Windows	11
+
+
 # +_+
 iPhone 3G	iPhone3G
 iPhone 3GS	iPhone3GS
@@ -229,11 +246,11 @@ macOS Big Sur	macOSBigSur
 macOS Monterey	macOSMonterey
 macOS Ventura	macOSVentura
 macOS Sonoma	macOSSonoma
-macOS Sequoia	macOSSequoia
 Windows 95	Windows95
 Windows 98	Windows98
 Windows Me	WindowsMe
 Windows 2000	Windows2000
+Windows XP	WindowsXP
 Windows Vista	WindowsVista
 Windows 7	Windows7
 Windows 8	Windows8
@@ -246,6 +263,8 @@ High Sierra	HighSierra
 Mojave	Mojave
 Big Sur	BigSur
 TypeORM	TypeORM
+Wick	Wick
+wick	wick
 RPG	RPG
 Role-Playing Game	RPG
 Role-Playing Game	RolePlayingGame
@@ -287,6 +306,7 @@ Netscape	Netscape
 WeChat	WeChat
 Dota	Dota
 Database	Database
+Macintosh	Macintosh
 Superlist	Superlist
 DJ	DJ
 DLC	DLC
@@ -353,33 +373,7 @@ Aeropex	Aeropex
 X11	X11
 Xnip	Xnip
 Workspace	Workspace
-AdSense	AdSense
-Authenticator	Authenticator
-Chrome	Chrome
-DeepMind	DeepMind
-Google	Google
-Google Ads	GoogleAds
-Google AdSense	GoogleAdSense
-Google Analytics	GoogleAnalytics
-Google Authenticator	GoogleAuthenticator
-Google Bard	GoogleBard
-Googlebot	Googlebot
-Google Calendar	GoogleCalendar
 Google Chrome	GoogleChrome
-Google DeepMind	GoogleDeepMind
-Google Docs	GoogleDocs
-Google Drive	GoogleDrive
-Google Gemini	GoogleGemini
-Google Gemini Advanced	GoogleGeminiAdvanced
-Google Keep	GoogleKeep
-Google Maps	GoogleMaps
-Google One	GoogleOne
-Google Photos	GooglePhotos
-Google Pixel	GooglePixel
-Google Play	GooglePlay
-Google Play Music	GooglePlayMusic
-Google TV	GoogleTV
-Google Voice	GoogleVoice
 Google Workspace	GoogleWorkspace
 WYSIWYG	WYSIWYG
 What You See Is What You Get	WYSIWYG
@@ -415,6 +409,8 @@ CloudXNS	CloudXNS
 Bitwarden	Bitwarden
 BitComet	BitComet
 Bitbucket	Bitbucket
+Google Photos	GooglePhotos
+Google Calendar	GoogleCalendar
 LyricsX	LyricsX
 OneDrive	OneDrive
 Xbox	Xbox
@@ -440,7 +436,6 @@ IDEA Ultimate	IDEAUltimate
 IDE	IDE
 NTR	NTR
 Notion	Notion
-Notion AI	NotionAI
 Touch Bar	TouchBar
 DOM	DOM
 D.VA	D.VA
@@ -485,14 +480,11 @@ Hexo	Hexo
 Hugo	Hugo
 Epic	Epic
 Epic Games	EpicGames
-Instagram	IG
-Instagram	INS
 Instagram	Instagram
 Evernote	Evernote
 PDF	PDF
 Portable Document Format	PDF
 Portable Document Format	PortableDocumentFormat
-PDFs	PDFs
 QuickTime Player	QuickTimePlayer
 CSDN	CSDN
 Gitee	Gitee
@@ -518,7 +510,6 @@ DBMesh	DBMesh
 Facebook	Facebook
 Firefox	Firefox
 git	git
-Go	Go
 GoLand	GoLand
 Golang	Golang
 IQOS	IQOS
@@ -526,8 +517,6 @@ Intel	Intel
 JSON	JSON
 JetBrains	JetBrains
 KTV	KTV
-Mac	Mac
-Macintosh	Macintosh
 MBP	MBP
 MacBook Pro	MBP
 MBA	MBA
@@ -568,12 +557,7 @@ Xcode	Xcode
 emoji	emoji
 gakki	gakki
 iMazing	iMazing
-ECMAScript	ECMAScript
 jQuery	jQuery
-JS	JS
-JavaScript	JS
-JavaScript	JavaScript
-JSP	JSP
 JPG	JPG
 Joint Photographic Experts Group	JPG
 JPEG	JPEG
@@ -690,6 +674,8 @@ Gif Brewery	GifBrewery
 gists	gists
 GitHub	GitHub
 GoagentX	GoagentX
+Google Play	GooglePlay
+Google Play Music	GooglePlayMusic
 Graffle	Graffle
 Handoff	Handoff
 Hazel	Hazel
@@ -729,7 +715,6 @@ iTerm2	iTerm2
 iTunes	iTunes
 iTunes Connect	iTunesConnect
 iTunes Match	iTunesMatch
-iBook	iBook
 iWatch	iWatch
 Kaleidoscope	Kaleidoscope
 Karabiner	Karabiner
@@ -810,9 +795,9 @@ Scrapbook	Scrapbook
 ScreenFloat	ScreenFloat
 ScreenFlow	ScreenFlow
 Scrivener	Scrivener
+SDK	SDK
 SDDM	SDDM
 Simple Desktop Display Manager	SDDM
-SDK	SDK
 Software Development Kit	SDK
 Software Development Kit	SoftwareDevelopmentKit
 Should I Sleep	ShouldISleep
@@ -825,7 +810,6 @@ Sparrow	Sparrow
 Speedtest	Speedtest
 Spotify	Spotify
 SSL	SSL
-Secure Sockets Layer	SSL
 StackSocial	StackSocial
 Sublime Text	SublimeText
 TechWeb	TechWeb
@@ -882,7 +866,6 @@ Rosetta	Rosetta
 Face ID	FaceID
 URL	URL
 Uniform Resource Locator	URL
-URLs	URLs
 URI	URI
 Uniform Resource Identifier	URI
 HTTP	HTTP
@@ -919,6 +902,7 @@ GMT	GMT
 Greenwich Mean Time	GMT
 Greenwich Mean Time	GreenwichMeanTime
 GoDaddy	GoDaddy
+Eason	Eason
 SQLAlchemy	SQLAlchemy
 Admin	Admin
 Administrator	Administrator
@@ -960,6 +944,7 @@ Pickup Artists	PickupArtists
 Dockerfile	Dockerfile
 Docker Hub	DockerHub
 Darcula	Darcula
+Google Analytics	GoogleAnalytics
 Cloudflare Pages	CloudflarePages
 GitHub Pages	GitHubPages
 Coding Pages	CodingPages
@@ -984,6 +969,8 @@ CocoaPods	CocoaPods
 Zsh	Zsh
 Oh My Zsh	OhMyZsh
 ProxyChains	ProxyChains
+AdSense	AdSense
+Google AdSense	GoogleAdSense
 Disqus	Disqus
 Waline	Waline
 Valine	Valine
@@ -1006,6 +993,8 @@ Yandex	Yandex
 Geralt	Geralt
 ServerCat	ServerCat
 Zoho	Zoho
+Harington	Harington
+Hades	Hades
 Gecko	Gecko
 TinyPNG	TinyPNG
 Thanos	Thanos
@@ -1015,6 +1004,7 @@ Extensible Markup Language	ExtensibleMarkupLanguage
 XHTML	XHTML
 eXtensible HyperText Markup Language	XHTML
 eXtensible HyperText Markup Language	eXtensibleHyperTextMarkupLanguage
+Googlebot	Googlebot
 Baiduspider	Baiduspider
 Bingbot	Bingbot
 SogouSpider	SogouSpider
@@ -1074,6 +1064,7 @@ GNU General Public License	GNU
 GNU General Public License	GNUGeneralPublicLicense
 GPL	GPL
 GNU General Public License	GPL
+Ukraine	Ukraine
 Minions	Minions
 Rush B	RushB
 Rush A	RushA
@@ -1118,7 +1109,6 @@ BIOS	BIOS
 Basic Input/Output System	BIOS
 Basic Input/Output System	BasicInput/OutputSystem
 goroutine	goroutine
-goroutines	goroutines
 Celsius	Celsius
 Fahrenheit	Fahrenheit
 Mojito	Mojito
@@ -1127,6 +1117,7 @@ TickTick	TickTick
 CHDBits	CHDBits
 M-Team	M-Team
 Vim	Vim
+Google Voice	GoogleVoice
 Workers	Workers
 Cloudflare Workers	CloudflareWorkers
 PlayStation	PlayStation
@@ -1152,9 +1143,9 @@ Microsoft Edge	MicrosoftEdge
 IE	IE
 Internet Explorer	IE
 Internet Explorer	InternetExplorer
+Windows Media Player	WindowsMediaPlayer
 Media Player	MediaPlayer
 Windows Media Player	MediaPlayer
-Windows Media Player	WindowsMediaPlayer
 Visual Studio Code	VisualStudioCode
 Visual Studio Code	VSCode
 PowerShell	PowerShell
@@ -1164,6 +1155,7 @@ Skype	Skype
 TOC	TOC
 Table of Contents	TOC
 Table of Contents	TableOfContents
+Jenny	Jenny
 One Dark	OneDark
 IINA	IINA
 GUID	GUID
@@ -1187,7 +1179,10 @@ Sheeran	Sheeran
 Cloudflare Images	CloudflareImages
 Cloudflare Stream	CloudflareStream
 Zero Trust	ZeroTrust
+goroutines	goroutines
 Universal Actions	UniversalActions
+Google Drive	GoogleDrive
+Google One	GoogleOne
 Airbnb	Airbnb
 OpenCC	OpenCC
 HarmonyOS	HarmonyOS
@@ -1305,8 +1300,8 @@ SFTP	SFTP
 SSH File Transfer Protocol	SFTP
 SSH File Transfer Protocol	SSHFileTransferProtocol
 uPic	uPic
-refactor	refactor
 refactoring	refactoring
+refactor	refactor
 Notepad	Notepad
 Notepad++	Notepad++
 Notepad++	npp
@@ -1345,12 +1340,6 @@ RubyMine	RubyMine
 AppCode	AppCode
 Code With Me	CodeWithMe
 JetBrains Mono	JetBrainsMono
-JDK	JDK
-Java Development Kit	JDK
-Java Development Kit	JavaDevelopmentKit
-JRE	JRE
-Java Runtime Environment	JRE
-Java Runtime Environment	JavaRuntimeEnvironment
 JVM	JVM
 Java Virtual Machine	JVM
 Java Virtual Machine	JavaVirtualMachine
@@ -1366,7 +1355,6 @@ FIFO	FIFO
 First In, First Out	FIFO
 LIFO	LIFO
 Last In, First out	LIFO
-Neat Download Manager	NDM
 Neat Download Manager	NeatDownloadManager
 Maine	Maine
 Elijah	Elijah
@@ -1467,7 +1455,6 @@ McAfee	McAfee
 OK	OK
 NG	NG
 TV	TV
-television	TV
 VTuber	VTuber
 NVMe	NVMe
 NGFF	NGFF
@@ -1521,12 +1508,14 @@ Steam	Steam
 Steam Deck	SteamDeck
 Android	Android
 android	android
+Chrome	Chrome
 iOS	iOS
 Linux	Linux
 Ubuntu	Ubuntu
 Windows	Windows
 Microsoft	Microsoft
 Nintendo	Nintendo
+Google	Google
 Nexus	Nexus
 Wii U	WiiU
 Wii	Wii
@@ -1535,7 +1524,6 @@ OriginOS	OriginOS
 iPhone	iPhone
 iPad	iPad
 iPod	iPod
-# iPods	iPods
 UI	UI
 UK	UK
 United Kingdom	UK
@@ -1543,17 +1531,104 @@ United Kingdom	UnitedKingdom
 DirectX	DirectX
 Kinect	Kinect
 Cloudflare	Cloudflare
+Buddhism	Buddhism
+Catholic	Catholic
+Christ	Christ
+Christian	Christian
+Christmas	Christmas
+Easter	Easter
+Egyptian	Egyptian
+Islam	Islam
+Jupiter	Jupiter
+Latin	Latin
+Mars	Mars
+Marxist	Marxist
+Moslem	Moslem
+Negro	Negro
+Thanksgiving	Thanksgiving
+Venus	Venus
 X-ray	X-ray
+American	American
+Australia	Australia
+Australian	Australian
+Brazil	Brazil
+Brazilian	Brazilian
+Britain	Britain
+Canada	Canada
+Canadian	Canadian
+Chinese	Chinese
+Danish	Danish
+Denmark	Denmark
+Dutch	Dutch
+Egypt	Egypt
+England	England
+English	English
+Filipino	Filipino
+Finland	Finland
+Finn	Finn
+Finnish	Finnish
+France	France
+French	French
+German	German
+Germany	Germany
+Greece	Greece
+Greek	Greek
+Hebrew	Hebrew
+Hindi	Hindi
 Hip-Hop	Hip-Hop
+Iceland	Iceland
+Icelander	Icelander
+Icelandic	Icelandic
+India	India
+Indian	Indian
+Iran	Iran
+Iranian	Iranian
+Ireland	Ireland
+Irish	Irish
+Irishman	Irishman
+Israel	Israel
+Israeli	Israeli
+Italian	Italian
+Italilian	Italilian
+Italy	Italy
+Japan	Japan
+Japanese	Japanese
+Korea	Korea
+Korean	Korean
+native American	nativeAmerican
+Netherlands	Netherlands
+New Zealand	NewZealand
+New Zealander	NewZealander
+Philppines	Philppines
+Poland	Poland
+Pole	Pole
+Polish	Polish
+Portugal	Portugal
+Portuguese	Portuguese
+Russia	Russia
+Russian	Russian
+Scotland	Scotland
+Scots	Scots
+Scottish	Scottish
 Simplified Chinese	SimplifiedChinese
 Traditional Chinese	TraditionalChinese
-United States	US
-United States	UnitedStates
+Singapore	Singapore
+Spain	Spain
+Spanish	Spanish
+Swede	Swede
+Sweden	Sweden
+Swedish	Swedish
+Swiss	Swiss
+Thai	Thai
+Thailand	Thailand
 USA	USA
 The United States of America	USA
+United States	UnitedStates
 USD	USD
 United States Dollar	USD
 United States Dollar	UnitedStatesDollar
+Wales	Wales
+Welsh	Welsh
 CN	CN
 MTV	MTV
 Music Television	MTV
@@ -1598,6 +1673,7 @@ Bulletin Board System	BBS
 Bulletin Board System	BulletinBoardSystem
 chrono	chrono
 Widevine	Widevine
+Google Ads	GoogleAds
 Valhalla	Valhalla
 KFC	KFC
 AWP	AWP
@@ -1616,6 +1692,9 @@ Lua	Lua
 MacType	MacType
 Alipay	Alipay
 WeChat Pay	WeChatPay
+Google Maps	GoogleMaps
+Google Keep	GoogleKeep
+Google Docs	GoogleDocs
 UPnP	UPnP
 Universal Plug and Play	UPnP
 Universal Plug and Play	UniversalPlugandPlay
@@ -1660,13 +1739,14 @@ GPT	GPT
 Generative Pre-trained Transformer	GPT
 GPT-4	GPT-4
 GPT-3.5	GPT-3.5
-GPTs	GPTs
+Google Bard	GoogleBard
 LaMDA	LaMDA
 Language Model for Dialogue Applications	LaMDA
 Coinbase Wallet	CoinbaseWallet
 MetaMask	MetaMask
 Discord	Discord
 New Bing	NewBing
+Notion AI	NotionAI
 flomo	flomo
 HanLP	HanLP
 Arch Linux	ArchLinux
@@ -1684,6 +1764,9 @@ Key Performance Indicators	KPI
 mutex	mutex
 TIOBE	TIOBE
 DigitalOcean	DigitalOcean
+Google Authenticator	GoogleAuthenticator
+Authenticator	Authenticator
+authenticator	authenticator
 Depay	Depay
 Codeium	Codeium
 OpenCat	OpenCat
@@ -1691,6 +1774,17 @@ OpenWrt	OpenWrt
 AWS	AWS
 Amazon Web Services	AWS
 Amazon Web Services	AmazonWebServices
+Orion	Orion
+Virgo	Virgo
+Aries	Aries
+Taurus	Taurus
+Cancer	Cancer
+Libra	Libra
+Scorpio	Scorpio
+Sagittarius	Sagittarius
+Capricorn	Capricorn
+Aquarius	Aquarius
+Pisces	Pisces
 Tailwind	Tailwind
 Tailwind CSS	TailwindCSS
 Fcitx	Fcitx
@@ -1699,6 +1793,7 @@ openSUSE	openSUSE
 FOMO	FOMO
 Fear of Missing Out	FOMO
 bromite	bromite
+Laotian	Laotian
 orz	orz
 Scooby-Doo	Scooby-Doo
 SpongeBob	SpongeBob
@@ -1727,6 +1822,7 @@ SVN	SVN
 Apache Subversion	SVN
 TLS	TLS
 Transport Layer Security	TLS
+Secure Sockets Layer	SSL
 UDP	UDP
 User Datagram Protocol	UDP
 TCP	TCP
@@ -1743,8 +1839,6 @@ WWII	WWII
 World War II	WWII
 WWIII	WWIII
 World War III	WWIII
-pgSQL	pgSQL
-PostgreSQL	pgSQL
 PL/pgSQL	PL/pgSQL
 Procedural Language / PostGres Structured Query Language	PL/pgSQL
 IQ	IQ
@@ -1773,6 +1867,7 @@ Cinderella	Cinderella
 WebGPU	WebGPU
 Mailfence	Mailfence
 CodeWhisperer	CodeWhisperer
+Heisenberg	Heisenberg
 espanso	espanso
 okey	okey
 okey-dokey	okey-dokey
@@ -1836,6 +1931,8 @@ Wayland	Wayland
 Wappalyzer	Wappalyzer
 noop	noop
 Kung Fu	KungFu
+DeepMind	DeepMind
+Google DeepMind	GoogleDeepMind
 TL;DR	TL;DR
 too long; didn't read	TL;DR
 Ant-Man	Ant-Man
@@ -1922,6 +2019,8 @@ BT	BT
 ProtonMail	ProtonMail
 Elasticsearch	Elasticsearch
 Next.js	Next.js
+JDK	JDK
+Java Development Kit	JDK
 rho	rho
 D&D	D&D
 Dungeons & Dragons	D&D
@@ -1932,6 +2031,7 @@ Dungeons & Dragons	DnD
 Minecraft	Minecraft
 LSP	LSP
 Language Server Protocol	LSP
+Google Pixel	GooglePixel
 C#	C#
 KeyCastr	KeyCastr
 Laugh Tale	LaughTale
@@ -1983,6 +2083,7 @@ they've	they've
 lemme	lemme
 outta	outta
 whatcha	whatcha
+Google TV	GoogleTV
 PVP	PVP
 Player versus Player	PVP
 PVE	PVE
@@ -2015,6 +2116,7 @@ WireGuard	WireGuard
 AdGuard	AdGuard
 Altman	Altman
 Ultraman	Ultraman
+GPTs	GPTs
 sider	sider
 DALL·E	DALL·E
 e.g.	e.g.
@@ -2068,6 +2170,8 @@ submodules	submodules
 Writerside	Writerside
 Manifest V2	ManifestV2
 Manifest V3	ManifestV3
+Google Gemini	GoogleGemini
+Google Gemini Advanced	GoogleGeminiAdvanced
 IMBA	IMBA
 GitButler	GitButler
 Sora	Sora
@@ -2116,33 +2220,3 @@ kubectl	kubectl
 mvn	mvn
 mvnd	mvnd
 maven	maven
-Fluent UI	FluentUI
-ActiveX	ActiveX
-arXiv	arXiv
-Gzip	Gzip
-LexisNexis	LexisNexis
-phpBB	phpBB
-ThinkPad	ThinkPad
-WebLogic	WebLogic
-Yahoo	Yahoo
-Zope	Zope
-GameBoy	GameBoy
-GameCube	GameCube
-GameFAQs	GameFAQs
-WSL	WSL
-Windows Subsystem for Linux	WSL
-MSVC	MSVC
-Microsoft Visual C++	MSVC
-Microsoft Visual C++	MicrosoftVisualC++
-DBeaver	DBeaver
-Vite	Vite
-AE86	AE86
-M1	M1
-M2	M2
-M3	M3
-M4	M4
-3G	3G
-4G	4G
-5G	5G
-2D	2D
-4D	4D
