--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -8,4 +8,5 @@ patch:
   "menu/page_size": 9
   schema_list:
     - {schema: rime_frost}
+  "switcher/fold_options": false
   "switcher/abbreviate_options": false
