--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -1,13 +1,10 @@
 customization:
   distribution_code_name: Weasel
-  distribution_version: 0.16.1
+  distribution_version: 0.17.4
   generator: "Rime::SwitcherSettings"
-  modified_time: "Sat Sep 21 15:58:45 2024"
-  rime_version: 1.11.2
+  modified_time: "Mon Aug 11 00:41:34 2025"
+  rime_version: 1.13.1
 patch:
-  "menu/page_size": 9
   schema_list:
-    - {schema: rime_frost}
-      
-  "switcher/fold_options": false
-  "switcher/abbreviate_options": false
+    - {schema: wanxiang}
+
