--- a/squirrel.yaml
+++ b/squirrel.yaml
@@ -1,16 +1,8 @@
 # Squirrel settings
 # encoding: utf-8
-#
-# squirrel[.custom].yaml 是鼠须管的前端配置文件，小狼毫是 weasel[.custom].yaml
-# 各平台皮肤配置并不一致。
-#
-# 鼠须管内置皮肤展示： https://github.com/NavisLab/rime-pifu
-# 鼠须管界面配置指南： https://github.com/LEOYoon-Tsaw/Rime_collections/blob/master/鼠鬚管介面配置指南.md
-# 鼠须管作者写的图形化的皮肤设计器： https://github.com/LEOYoon-Tsaw/Squirrel-Designer
-
 
 # 要比共享目錄同名文件版本號更大方可生效
-config_version: '2024-07-11'
+config_version: 'LTS'
 
 # options: last | default | _custom_
 # last: the last used latin keyboard layout
@@ -23,9 +15,6 @@ chord_duration: 0.1  # seconds
 
 # options: always | never | appropriate
 show_notifications_when: appropriate
-# ascii_mode、inline、no_inline、vim_mode 等等设定
-# 可参考 /Library/Input Methods/Squirrel.app/Contents/SharedSupport/squirrel.yaml
-
 
 style:
   inline_preedit: true    # 在文本框顯示輸入串
@@ -133,7 +122,18 @@ preset_color_schemes:
     hilited_candidate_back_color: 0x444444
     comment_text_color: 0x808080
 
-
+  solarized_rock:
+    name: 曬經石／Solarized Rock
+    author: "Aben <tntaben@gmail.com>, based on Ethan Schoonover's Solarized color scheme"
+    back_color: 0x362b00
+    border_color: 0x362b00
+    text_color: 0x8236d3
+    hilited_text_color: 0x98a12a
+    candidate_text_color: 0x969483
+    comment_text_color: 0xc098a12a
+    hilited_candidate_text_color: 0xffffff
+    hilited_candidate_back_color: 0x8236d3
+    hilited_comment_text_color: 0x362b00
 
   clean_white:
     name: 简约白／Clean White
@@ -244,6 +244,22 @@ preset_color_schemes:
     hilited_comment_text_color: 0x8144C2    #Lab 50 , 65,-5
     hilited_text_color: 0x2C8BAE            #Lab 60 , 10, 65
 
+  solarized_dark:
+    name: 曬經・月／Solarized Dark
+    author: 雪齋 <lyc20041@gmail.com>
+    back_color: 0xF0352A0A                  #Lab 15 ,-12,-12
+    border_color: 0x2A1F00                  #Lab 10 ,-12,-12
+    preedit_back_color: 0xD7E8ED            #Lab 92 , 0 , 10
+    candidate_text_color: 0x7389FF          #Lab 75 , 65, 45
+    label_color: 0x478DF4                   #Lab 70 , 45, 65
+    comment_text_color: 0xC38AFF            #Lab 75 , 65,-5
+    text_color: 0x756E5D                    #Lab 45 ,-7 ,-7
+    hilited_back_color: 0xC9DADF            #Lab 87 , 0 , 10
+    hilited_candidate_back_color: 0x403516  #Lab 20 ,-12,-12
+    hilited_candidate_text_color: 0x989F52  #Lab 60 ,-35,-5
+    hilited_candidate_label_color: 0xCC8947 #Lab 55 ,-10,-45
+    hilited_comment_text_color: 0x289989    #Lab 60 ,-20, 65
+    hilited_text_color: 0xBE706D            #Lab 50 , 15,-45
 
   mac_light:
     name: Mac浅色
@@ -442,7 +458,6 @@ preset_color_schemes:
     hilited_candidate_text_color: 0x3942CB   # 第一候选项文字颜色
     hilited_comment_text_color: 0x8144C2     # 注解文字高亮
 
-
   google:
     name: 谷歌
     candidate_format: "%c %@ "    # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间
@@ -468,6 +483,7 @@ preset_color_schemes:
     font_point: 16                           # 候选文字大小
     label_font_point: 14                     # 候选编号大小
     line_spacing: 8                          # 行间距
+    line_spacing: 10                         # 行间距(适用于竖排)
     border_height: 4                             # 窗口上下高度，大于圆角半径才生效
     border_width: 4                              # 窗口左右宽度，大于圆角半径才生效
     corner_radius: 5                         # 窗口圆角
@@ -946,6 +962,7 @@ preset_color_schemes:
   phub:
     name: 'phub' # 配色取自phub
     author: phub
+    name: phub
     back_color: 0x000000
     border_color: 0x3FA0F0
     text_color: 0xFFFFFF
